fix login z-index

--- a/frontend/src/routes/home/style.css
+++ b/frontend/src/routes/home/style.css
@@ -72,8 +72,6 @@
 }
 
 .cta > .links {
-  position: relative;
-  z-index:3;
   width: 100%;
   height: 100%;
   display: flex;
@@ -82,6 +80,7 @@
 }
 
 .cta > .links a {
+  z-index:3;
   font-size: 1.3em;
   height: 100%;
   color: #FF1E00;
@@ -118,6 +117,10 @@
 .cta .login > h1 {
   margin-top: 0;
   color: black;
+}
+
+.cta .login {
+  z-index:4;
 }
 
 .cta .login .resume {
